--- a/ws.csproj
+++ b/ws.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Fleck" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="uldahlalex.websocket.boilerplate" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
